Fix content overflow error by assigning width to the body.

--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,21 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  width: fit-content;
 }
 .navbar {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
-  padding: 20px 40px;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
+  background-color: rgba(245, 245, 220, 0.062);
+  padding: 20px;
 }
 .header {
-  background-color: darkolivegreen;
+  background-color: black;
   color: white;
+  padding: 20px 100px;
 }
 h3 {
   font-size: 24px;
@@ -28,6 +30,7 @@ a {
   display: flex;
   list-style-type: none;
   text-decoration: none;
+  padding: 2px;
   color: wheat;
   gap: 16px;
   font-size: 18px;
@@ -38,46 +41,59 @@ a:hover,
 button:hover {
   background-color: darkorange;
 }
-
+.left {
+  background-color: rgba(245, 222, 179, 0.062);
+  padding: 20px;
+}
 .intro {
   display: flex;
-  gap: 16px;
+  align-items: center;
+  gap: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 h1 {
   font-size: 48px;
   font-weight: extra bold;
 }
-
 .right img {
-  width: 400px;
-  padding: 0;
-  border: 4px solid black;
-}
-.title {
   display: flex;
-  justify-content: center;
-  font-size: 36px;
-  font-weight: extra bold;
+  width: 400px;
+  border: 2px solid orange;
 }
+/* -------------content-student work--------------- */
 .container-one {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: white;
   color: rgb(218, 141, 0);
 }
 
-.content,
-figcaption {
+.title {
+  font-size: 36px;
+  font-weight: extra bold;
+  padding: 0;
+  margin: 0;
+}
+
+.content {
   display: flex;
   justify-content: center;
+}
+figcaption {
+  text-align: center;
 }
 .content img {
   width: 200px;
   height: 300px;
-  border-radius: 50%;
   border: 4px solid darkolivegreen;
-  margin: 10px;
   padding: 10px;
 }
 .quote {
+  padding: 2px 100px;
+}
+.container-two {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,21 +103,37 @@ figcaption {
   background-color: rgb(207, 204, 204);
 }
 .container-three {
-  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
 }
 .modal {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: rgb(218, 141, 0);
+  background-color: darkolivegreen;
+  padding: 1em;
+  border-radius: 10px;
+  gap: 3em;
 }
+.modal button {
+  border: whitesmoke solid;
+}
+
 button {
   background-color: orange;
   color: white;
+  padding: 12px 32px;
+  font-weight: bold;
+  border-radius: 8px;
+  font-size: 18px;
+  border: none;
 }
 .footer {
   display: flex;
   justify-content: center;
-  background-color: darkolivegreen;
+  background-color: black;
   color: white;
 }
